Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextRetTextObj.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, Text> yoda
        Text ret = yoda:useForce(one, two)
        output "passed"
     end
end
