Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjTextRetintegerFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
